# ASTra

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: e2e-tests.yml
benchmarks/data/: swebench-django.jsonl
benchmarks/newbench/: BENCHMARK_ANALYSIS.md  evaluate_correctness.py  visualize_predictions.py
benchmarks/reports/: raw_report_head.json  xy_benchmark_e2e_report_academic.json
benchmarks/scripts/: filter_django.py
benchmarks/xybench/: README.md
benchmarks/xybench/data/: xy_benchmark_50.jsonl  xy_benchmark_full.jsonl  xy_scores_all.jsonl
benchmarks/xybench/reports/: xy_benchmark_e2e_report_final.json
benchmarks/xybench/scripts/: curate_xy_bench.py
scripts/: compare_benchmark_reports.py  download_swebench.py  generate_svg_report.py  view_benchmark_grid.py
src/: config.rs  embeddings.rs  graph.rs  indexer.rs  lib.rs  main.rs  skeleton.rs  storage.rs  test_helpers.rs  vector_store.rs  watcher.rs
src/mcp/: format.rs  mod.rs  transport.rs  types.rs
src/parser/: js_parser.rs  mod.rs  python_parser.rs  rust_parser.rs  types.rs
src/search/: astar.rs  mod.rs  types.rs
tests/: e2e_test.rs
