[package]
name = "astra"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
description = "Local semantic code search MCP server powered by AST analysis"
license = "MIT"

[features]
default = ["local"]
local = ["dep:fastembed", "dep:ort"]
openrouter = ["dep:reqwest"]
cuda = ["local", "ort/cuda"]

[dependencies]
# AST parsing
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"

# Graph
petgraph = { version = "0.6", features = ["serde-1"] }

# Parallelism
rayon = "1"

# Async runtime & file watching
tokio = { version = "1", features = ["full"] }
notify = "6"
notify-debouncer-mini = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Utilities
walkdir = "2"
ignore = "0.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
zstd = "0.13"
half = { version = "2", features = ["serde"] }
llmg-core = "0.2.0"
llmg-providers = { version = "0.2.0", default-features = false, features = ["openai", "ollama", "z_ai"] }

# Semantic embeddings via ONNX Runtime (BAAI/bge-base-en-v1.5)
fastembed = { version = "4", optional = true }
ort = { version = "2.0.0-rc.9", optional = true }
tracing-subscriber = "0.3.22"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking", "json"], optional = true }

[[bin]]
name = "test_ep"
path = "src/bin/test_ep.rs"
required-features = ["local"]

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
tracing-subscriber = "0.3.22"
